# webapi

./: .gitignore  .pre-commit-config.yaml  API_SIMPLE.json  ASISTENTE_GUIA_DEFINITIVA.md  CHECKLIST_VERIFICACION.md  CONFIGURACION_ASISTENTE.md  COPILOT_COMPLETE_V3_INSTRUCTIONS.md  DEPLOYMENT_GUIDE_NO_DOCKER.md  DIAGNOSTICO_COMPLETO_SOLUCION.md  Dockerfile  ELITEDYNAMICS_ASSISTANT_FINAL.json  ELITEDYNAMICS_ASSISTANT_OPENAI_DIRECT.json  ENV_VARIABLES.md  GUIA_CONFIGURACION_CUSTOM_GPT.md  GUIA_CONFIGURACION_CUSTOM_GPT_COMPLETA.md  INSTRUCCIONES_ASISTENTE_INTELIGENTE.md  INTEGRATION_GUIDE.md  MANUAL_ASISTENTE_OPENAI.md  Makefile  PROMPT_ASISTENTE_ESPECIFICO.md  PROXY_NATURAL.json  README.md  REPORTE_PRUEBAS_EXITOSO.md  RESUMEN_EJECUTIVO_ASISTENTE.md  RUNWAY_CORRECCION.md  SETUP_RAPIDO.md  SISTEMA_VOZ_Y_IA.md  SOLUCION_COMPLETA_CUSTOM_GPT.md  TODAS_LAS_RUTAS_REALES.json  TRANSFORMATION_GUIDE.md  audio_assistant.py  azure.yaml  azure_env_config.txt  backup_project_complete.sh  chat_interface.py  copilot_v3_instructions.md  custom_gpt_schema.json  demo_implementation.py  deploy.sh  docker-compose.yml  (+27 more)
.github/workflows/: azure_webapp_deploy.yml  ci.yml  codeql.yml  deploy.yml  prueba.request.txt
antenv/: pyvenv.cfg
app/: __init__.py  dependencies.py  main.py  schemas.py  validate_action_map.py
app/actions/: __init__.py  azuremgmt_actions.py  bookings_actions.py  calendar_actions.py  calendario_actions.py  correo_actions.py  email_optimized_actions.py  forms_actions.py  gemini_actions.py  github_actions.py  google_marketing_enhanced.py  google_services_actions.py  googleads_actions.py  graph_actions.py  hubspot_actions.py  intelligent_assistant_actions.py  linkedin_ads_actions.py  linkedin_enhanced_actions.py  metaads_actions.py  notion_actions.py  office_actions.py  onedrive_actions.py  openai_actions.py  planner_actions.py  power_automate_actions.py  powerbi_actions.py  resolver_actions.py  runway_actions.py  runway_enhanced.py  sharepoint_actions.py  stream_actions.py  teams_actions.py  tiktok_ads_actions.py  tiktok_enhanced.py  todo_actions.py  userprofile_actions.py  users_actions.py  vivainsights_actions.py  webresearch_actions.py  whatsapp_actions.py  (+6 more)
app/api/: __init__.py  schemas.py
app/api/routes/: __init__.py  ai_workflows.py  assistant_selector.py  azuremgmt_router.py  bookings_router.py  calendario_router.py  chatgpt_proxy.py  chatgpt_proxy_clean.py  chatgpt_proxy_old.py  correo_router.py  dynamics_actions.py  facade_routes.py  forms_router.py  github_router.py  googleads_router.py  graph_router.py  hubspot_router.py  intelligent_assistant_router.py  intelligent_assistant_router_backup.py  intelligent_assistant_router_fixed.py  linkedin_ads_router.py  metaads_router.py  notion_router.py  office_router.py  onedrive_router.py  openai_direct.py  (+18 more)
app/auth/: __init__.py
app/core/: __init__.py  action_mapper.py  action_mapper_BACKUP.py  auth_manager.py  azure_helpers.py  config.py  event_bus.py  exceptions.py  gemini_planner.py  learning_system.py  openapi_compatibility.py  orchestrator.py  state_manager.py
app/memory/: __init__.py  conversational_memory.py  intelligent_assistant.py  intelligent_file_manager.py  learning_engine.py  memory_functions.py  persistent_memory.py  simple_memory.py
app/middleware/: __init__.py  audit_middleware.py  cors.py  logging.py  security.py
app/middlewares/: __init__.py  audit_middleware.py
app/services/: __init__.py
app/shared/: __init__.py  constants.py
app/workflows/: __init__.py  auto_workflow.py  simple_workflow.py  workflow_functions.py
infra/: abbreviations.json  main-appservice.bicep  main.bicep  resources-appservice.bicep  resources.bicep
integrations/: teams_bot.py  whatsapp_bot.py
integrations_ready/: CREDENCIALES_META.md  README_INTEGRACIONES.md  WHATSAPP_EXPRESS_20MIN.md  activar_integraciones.py  requirements_integrations.txt  teams_config.json  teams_integration_complete.py  teams_manifest.json  whatsapp_config.json  whatsapp_integration_complete.py
scripts/: cleanup.sh
static/: index.html  widget_example.html
tests/: __init__.py  conftest.py
(+13 files in other folders)
